--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,23 +6,14 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  PYTHON_VERSION: '3.10'
-
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-    # needs to be first
-    - name: Collect Workflow Telemetry
-      uses: runforesight/foresight-workflow-kit-action@v1
-      if: ${{ always() }}
-      with:
-        api_key: ${{ secrets.FORESIGHT_API_KEY }}
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: '3.10'
         cache: pip
     - uses: pre-commit/action@v3.0.0
 
@@ -35,14 +26,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Python ${{ env.PYTHON_VERSION }}
+    - name: Install Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: ${{ matrix.python-version }}
         cache: pip
 
     - name: Install Python dependencies
       run: pip install -r requirements.txt
+
+    - name: Build package locally
+      run: make install
 
     - name: Run tests
       run: make test
